# Searchable-Screenshots

./: .gitignore  Readme.md  main.py  pyproject.toml
Documentation/: architecture.md
scripts/: clean_invalid_entries.py  debug_vision_params.py  reindex_missing.py  test_batch_vision.py  test_hybrid_search.py  test_vision.py  verify_embeddings.py
src/core/: __init__.py  config.py  database.py  processor.py  search.py
src/gui/: __init__.py  app.py
src/services/: __init__.py  embedding.py  ocr.py  reranker.py  sparse_embedding.py  vector_store.py  vision.py
