[project]
name = "searchable-screenshots"
version = "0.1.0"
description = "Make your screenshots folder searchable"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bs4>=0.0.2",
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.5",
    "oneocr>=1.0.10",
    "sentence-transformers>=5.1.2",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]
[tool.uv]
link-mode = "symlink"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]